# SilkNSnare

./: .gitignore  Cargo.toml  README.md  build_web.sh  index.html
assets/: food.glb  fruit_fly.glb  jackolantern.glb  logo.glb  outdoor_scene.glb  spider.glb  spider.gltf  spider.mtl  stone.glb  tree.blend  tree.glb
assets_src/: dead_tree.blend  food.blend  fruit_fly.blend  fruit_fly.glb  grass.blend  jackolantern.blend  logo.blend  moon.blend  outdoor_scene.blend  skybox.xcf  spider.blend  stone.blend  tombstone.blend  tombstone2.blend  tree.blend  wrapped_web_texture.xcf
src/: config.rs  fruit_fly.rs  game.rs  health.rs  level_loaders.rs  main.rs  mesh_loader.rs  pumpkin.rs  skybox.rs  spider.rs  title_screen.rs  tree.rs
src/flying_insect/: flying_insect.rs  fruit_fly.rs  mod.rs
src/flying_obstacle/: flying_obstacle.rs  mod.rs  rock.rs
src/ui/: progress_bar.rs
src/web/: ensnare.rs  mod.rs  render.rs  spring.rs
